bk_ida/gccida/c3/dump_new_line
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_new_line/src/tree-dump.c:609:38: error: use of undeclared identifier 'arg0'
fprintf( di_0->stream, "\n%*s", 25, &arg0); 
                                     ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_new_line/src/obj/tree-dump.o] Error 1
